// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin/shipping-tpls form 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "params": Object {
          "include": "children",
          "parentId": "中国",
          "virtual": 0,
        },
        "url": "regions",
      },
    ],
    Array [
      Object {
        "loading": true,
        "method": "get",
        "url": "/api/admin/shipping-tpls/defaults",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;

exports[`admin/shipping-tpls form 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "params": Object {
          "include": "children",
          "parentId": "中国",
          "virtual": 0,
        },
        "url": "regions",
      },
    ],
    Array [
      Object {
        "loading": true,
        "method": "get",
        "url": "/api/admin/shipping-tpls/defaults",
      },
    ],
    Array [
      Object {
        "data": Object {
          "isFreeShipping": undefined,
          "name": "测试",
          "rules": Array [
            Object {
              "addAmount": 3,
              "addFee": 4,
              "id": 1,
              "isDefault": true,
              "regionIds": Array [],
              "serviceId": 1,
              "startAmount": 1,
              "startFee": 2,
            },
            Object {
              "addAmount": 3,
              "addFee": 4,
              "id": 2,
              "isDefault": false,
              "regionIds": Array [
                1,
              ],
              "serviceId": 1,
              "startAmount": 1,
              "startFee": 2,
            },
          ],
          "sort": 50,
          "valuationType": undefined,
        },
        "loading": true,
        "method": "POST",
        "url": "/api/admin/shipping-tpls",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;
